--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-baseurl: https://imhazige.github.io/myblog/
+#baseurl: https://imhazige.github.io/myblog
+
+paginate: 20
+
+plugins : ["jekyll-paginate"]
