--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ plugins : ["jekyll-paginate","jekyll-sitemap"]
 
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:categories/:year/:month/:day/:title 
+#permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: rouge
