fix url in index.html

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Kazge
-tagline: kazge
+title : Ka's Blog
+tagline: Ka's Blog
 author :
   name : Ka
   email : imhazige@gmail.com
