--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ title:  Ka's Blog
 author:
   name:  Ka
   email: imhazige@gmail.com
+  picture:
+    src:             https://avatars0.githubusercontent.com/u/4122902?v=4&s=460
 
 copyright:           '&copy; 2011 - 2017. All rights reserved.'
 
@@ -23,6 +25,9 @@ description:         >
   Ka's blog description...
 
 #plugins : ["jekyll-paginate","jekyll-sitemap"]
+
+exclude:
+  - show
 
 
 
