--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,9 +14,9 @@ Ka:
   picture:
     src:             https://avatars0.githubusercontent.com/u/4122902?v=4&s=460
     # srcset is optional, but can be used to provide higher res versions for retina displays
-    srcset:
-      1x:            https://placehold.it/128x128
-      2x:            https://placehold.it/256x256
+    # srcset:
+    #   1x:            https://placehold.it/128x128
+    #   2x:            https://placehold.it/256x256
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
