--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,10 @@ description:         >
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
-  name:              Ka
-  email:             imhazige@gmail.com
+  name:  Ka
+  email: imhazige@gmail.com
+  picture:
+    src:             https://avatars0.githubusercontent.com/u/4122902?v=4&s=460
 
 # Fallback image and color
 image:               /myblog/assets/img/nap.jpg
