--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -59,4 +59,4 @@ Ka:
     github:          imhazige
     email:           mailto:imhazige@gmail.com
     linkedin:        imhazige
-    rss:             gdh/feed.xml
+    rss:             https://imhazige.github.io/myblog/feed.xml
