--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title:               Ka's Blog
 
 # The unique resource location of your page.
 # Set to `https://<username>.github.io` when hosting on GitHub Pages
-url:                 http://blog.kazge.com
+url:                 https://blog.kazge.com
 
 # Set to '' when hosting a blog on GitHub Pages, ie on `//<username>.github.io`
 # Set to '/<reponame>' when using the `gh-pages` branch of a repository
