--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description:         >
 # This should be the same author as first entry in `_data/authors.yml`
 author:
   name:  Ka
-  email: imhazige@gmail.com
+  email: ka@kazge.com
   picture:
     src:             https://avatars0.githubusercontent.com/u/4122902?v=4&s=460
 
