update feed  url

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -58,4 +58,4 @@ Ka:
     # paypal:          <username>
     github:          imhazige
     email:           mailto:ka@kazge.com
-    rss:             https://imhazige.github.io/myblog/feed.xml
+    rss:             https://blog.kazge.com/feed.xml
