--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # -----------------------------------------------------------------------------
 #  User configuration
 # -----------------------------------------------------------------------------
+#encoding: "utf-8"
 
 title:               Ka's Blog
 
