--- a/_config.yml
+++ b/_config.yml
@@ -91,9 +91,9 @@ collections:
   featured_tags:
     permalink: /tag/:name/
     output: true
-  projects:
-    permalink: /projects/:path/
-    output: true
+  # projects:
+  #   permalink: /projects/:path/
+  #   output: true
 
 # -----------------------------------------------------------------------------
 #  Advanced configuration
