--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ google_fonts: Roboto+Slab:700|Noto+Sans:400,400i,700,700i
 google_analytics: UA-104619155-1
 
 # Setting a disqus shortname will enable the comment section on pages with `comments: true` in the front matter
-disqus_shortname: kazge
+disqus_shortname: myblog
 
 # This text will appear in the footer of every page. Markdown enabled.
 copyright: "&copy; 2013 - 2024. All rights reserved."
